# training-assistant

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Hand over from air.md  README.md  TESTING.md  apis.md  architecture.md  auth.py  backend_version.py  backlog.md  c4_architecture.puml  conftest.py  dependencies.txt  deploy-status-bar.js  experiment_llm_cleanup.py  extract-transcripts.sh  extract_transcripts.py  firefighter-prompt.md  healthcheck.py  healthcheck.sh  index_materials.py  issues.md  main.py  manual-test-plan.md  mcp.json  messaging.py  metrics.py  nginx.conf  normalize-transcripts.sh  openapi.json  pyproject.toml  quiz_config.example.env  quiz_core.py  quiz_daemon.py  quiz_generator.py  railway.toml  run_coverage.sh  run_tests.sh  (+25 more)
.claude/: settings.json
.github/: copilot-instructions.md  petclinic-instructions.md
adoc/: c3_backend.puml  c3_desktop_overlay.puml  c3_host_daemon.puml  c4_c1_context.puml  c4_c2_containers.puml  c4_c3_components.puml  seq_debate_flow.puml  seq_quiz_flow.puml  seq_slides_flow.puml  seq_slides_mirror_sync.puml  seq_summary_flow.puml  seq_system_interactions.puml  slides_sync_design.md
clean-clipboard/: README.md  clean.py  requirements.txt  start.sh
core/: auth.py  messaging.py  session_guard.py  session_registry.py  state.py  state_builder.py  version.py
daemon/: README.md  __init__.py  __main__.py  addon_bridge_client.py  architecture.md  bash_log.sh  config.py  debate_ai.py  email_notify.py  host_proxy.py  host_server.py  host_state_router.py  host_ws.py  http.py  indexer.py  llm_adapter.py  lock.py  log.py  materials_slides_catalog.json  project_files.py  proxy_handler.py  pyproject.toml  rag.py  scores.py  (+11 more)
(+586 files in other folders)
