[project]
name = "training-assistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.85.0",
    "fastapi>=0.128.8",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "uvicorn[standard]>=0.39.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "prod: smoke tests against the live Railway deployment",
    "load: load tests — connect many participants simultaneously",
]
